--- a/style/style.css
+++ b/style/style.css
@@ -366,7 +366,7 @@ nav {
   top: 0;
   left: 0;
   height: 4px;
-  background: #4359e8;
+  background: #FF6348;
   width: 0%;
   z-index: 30;
 }
